@@ -1,5 +1,6 @@
 Changes for 1.7.4
 
+ - [ZBX-1396] fixes in map element selection (Aly)
  - [ZBX-1394] fixed compilation of checks_db.c with enabled iODBC (Sasha)
  - [DEV-137] minor fix for PostgreSQL patch (Alexei)
 
